Fix redundant hero subtitle - differentiate from trust bar

--- a/shop.html
+++ b/shop.html
@@ -1278,7 +1278,7 @@
             <img src="prc-logo-white.png" alt="PRC Peptides" style="height:48px;margin-bottom:0.5rem;opacity:0.95">
             <h1>Research-Grade Peptides</h1>
             <p>No hype. Just peptides.</p>
-            <div style="margin-top:0.75rem;font-size:0.7rem;color:rgba(255,255,255,0.7);letter-spacing:0.5px">44 compounds · Third-party tested · Ships next day</div>
+            <div style="margin-top:0.75rem;font-size:0.7rem;color:rgba(255,255,255,0.7);letter-spacing:0.5px">44 compounds · Direct from manufacturer · Starting at $20</div>
         </div>
     </section>
 
