Hero: ≥98% Purity Peptides, remove subtitle

--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRC Peptides - Research-Grade Peptides</title>
+    <title>PRC Peptides - High-Purity Peptides</title>
     <style>
         * {
             margin: 0;
@@ -1276,9 +1276,9 @@
     <section class="hero">
         <div class="hero-content">
             <img src="prc-logo-white.png" alt="PRC Peptides" style="height:48px;margin-bottom:0.5rem;opacity:0.95">
-            <h1>Research-Grade Peptides</h1>
+            <h1>≥98% Purity Peptides</h1>
             <p>No hype. Just peptides.</p>
-            <div style="margin-top:0.75rem;font-size:0.7rem;color:rgba(255,255,255,0.7);letter-spacing:0.5px">44 compounds · Direct from manufacturer · Starting at $20</div>
+            <!-- subtitle removed -->
         </div>
     </section>
 
