--- a/shop.html
+++ b/shop.html
@@ -1275,7 +1275,7 @@
     <!-- Hero -->
     <section class="hero">
         <div class="hero-content">
-            <img src="prc-logo-white.png" alt="PRC Peptides" style="height:48px;margin-bottom:0.5rem;opacity:0.95">
+            <!-- logo removed from hero -->
             <h1>≥98% Purity Peptides</h1>
             <p>No hype. Just peptides.</p>
             <!-- subtitle removed -->
