Product pages v3 - build script + all 44 pages rebuilt
- Created automated build system with build_product_pages.js
- Generated all 44 product pages from template
- Standardized structure: SEO schema, FAQ, related products, mobile-friendly
- Removed old v2 pages, replaced with v3 quality (15-16KB each)
- All pages include: CAS numbers, molecular data, research applications
- Consistent formatting matching semaglutide.html gold standard

--- a/products/cagrilintide.html
+++ b/products/cagrilintide.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Tirzepatide 30mg | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Tirzepatide 30mg research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Buy Cagrilintide 5mg | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
+<meta name="description" content="Cagrilintide 5mg research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
-  "name": "Tirzepatide 30mg",
+  "name": "Cagrilintide 5mg",
   "description": "Research-grade peptide for in vitro laboratory investigation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
   },
-  "sku": "PRC-tirzepatide-30mg",
+  "sku": "PRC-cagrilintide",
   "offers": {
     "@type": "Offer",
-    "price": "46",
+    "price": "25",
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock",
-    "url": "https://prcpeptides.com/products/tirzepatide-30mg.html"
+    "url": "https://prcpeptides.com/products/cagrilintide.html"
   }
 }
 </script>
@@ -42,7 +42,7 @@
   },{
     "@type": "ListItem",
     "position": 3,
-    "name": "Tirzepatide 30mg"
+    "name": "Cagrilintide 5mg"
   }]
 }
 </script>
@@ -60,22 +60,22 @@
 </button>
 </div>
 </header>
-<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#glp">GLP Receptor Agonists</a> › Tirzepatide 30mg</div>
+<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#glp">GLP Receptor Agonists</a> › Cagrilintide 5mg</div>
 <main>
 <div class="category-label">GLP Receptor Agonists</div>
-<h1>Tirzepatide 30mg</h1>
+<h1>Cagrilintide 5mg</h1>
 <div class="product-meta">
-<div class="product-price">$46</div>
+<div class="product-price">$25</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
 <div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
-<tr><td>Quantity</td><td>30mg</td></tr>
+<tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>CAS Number</td><td>2023788-19-2</td></tr>
-<tr><td>Molecular Weight</td><td>4813.5 g/mol</td></tr>
-<tr><td>Molecular Formula</td><td>C<sub>225</sub>H<sub>348</sub>N<sub>48</sub>O<sub>68</sub></td></tr>
+<tr><td>CAS Number</td><td>2374769-38-1</td></tr>
+<tr><td>Molecular Weight</td><td>4409.5 g/mol</td></tr>
+<tr><td>Molecular Formula</td><td>C<sub>194</sub>H<sub>312</sub>N<sub>54</sub>O<sub>59</sub>S<sub>2</sub></td></tr>
 </table></div>
 <div class="trust-bar">
 <div class="trust-item">Third-Party Tested</div>
@@ -91,10 +91,10 @@
 </div>
 </div>
 <div class="action-btns">
-<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">46</span></button>
-<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Tirzepatide%2030mg" class="btn-secondary">Request COA</a>
+<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">25</span></button>
+<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Cagrilintide%205mg" class="btn-secondary">Request COA</a>
 </div>
-<h2>What is Tirzepatide 30mg?</h2>
+<h2>What is Cagrilintide 5mg?</h2>
 <p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
 
 <h2>Reconstitution & Use</h2>
@@ -125,7 +125,7 @@
 <h2>Researchers Also Explore</h2>
 <div class="related-grid">
 <a href="semaglutide.html" class="related-card"><div class="related-cat">GLP Agonists</div><div class="related-name">Semaglutide</div><div class="related-price">$30</div><div class="related-coa">COA ✓</div></a>
-<a href="tirzepatide-20mg.html" class="related-card"><div class="related-cat">GLP Agonists</div><div class="related-name">Tirzepatide 20mg</div><div class="related-price">$44</div><div class="related-coa">COA ✓</div></a>
+<a href="tirzepatide-30mg.html" class="related-card"><div class="related-cat">GLP Agonists</div><div class="related-name">Tirzepatide 30mg</div><div class="related-price">$46</div><div class="related-coa">COA ✓</div></a>
 <a href="bpc-157-tb-500.html" class="related-card"><div class="related-cat">Tissue Repair</div><div class="related-name">BPC-157/TB-500</div><div class="related-price">$40</div><div class="related-coa">COA ✓</div></a>
 </div>
 </div>
@@ -133,8 +133,8 @@
 <div class="mobile-sticky" id="mobileSticky">
 <div class="mobile-sticky-content">
 <div>
-<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">Tirzepatide 30mg</div>
-<div class="mobile-sticky-price">$<span id="mobileTotalPrice">46</span></div>
+<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">Cagrilintide 5mg</div>
+<div class="mobile-sticky-price">$<span id="mobileTotalPrice">25</span></div>
 </div>
 <button class="btn-primary" onclick="addToCart()">Add to Cart</button>
 </div>
@@ -142,7 +142,7 @@
 <footer id="pageFooter"><div class="footer-content"><div class="footer-logo"><span style="color:#2B7DE9">PRC</span> PEPTIDES</div><div class="footer-links"><a href="../shop.html">Shop</a><a href="mailto:support@prcpeptides.com">Contact</a></div><div class="footer-disclaimer">FOR RESEARCH PURPOSES ONLY. Not for human consumption. All products intended exclusively for in vitro research. © 2026 PRC Labs LLC</div></div></footer>
 <div class="toast" id="toast"></div>
 <script>
-var quantity=1;var basePrice=46;var productName='Tirzepatide 30mg';
+var quantity=1;var basePrice=25;var productName='Cagrilintide 5mg';
 function changeQty(delta){quantity=Math.max(1,quantity+delta);document.getElementById('qtyValue').textContent=quantity;updatePrice()}
 function updatePrice(){var total=basePrice*quantity;document.getElementById('totalPrice').textContent=total;document.getElementById('mobileTotalPrice').textContent=total}
 function addToCart(){var cart=JSON.parse(sessionStorage.getItem('prcCart')||'[]');var existing=cart.find(function(item){return item.name===productName});if(existing){existing.quantity+=quantity}else{cart.push({name:productName,price:basePrice,quantity:quantity})}sessionStorage.setItem('prcCart',JSON.stringify(cart));updateCartBadge();showToast()}
