--- a/products/dermorphin.html
+++ b/products/dermorphin.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy PT-141 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="PT-141 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Buy Dermorphin | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
+<meta name="description" content="Dermorphin research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
-  "name": "PT-141",
+  "name": "Dermorphin",
   "description": "Research-grade peptide for in vitro laboratory investigation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
   },
-  "sku": "PRC-pt-141",
+  "sku": "PRC-dermorphin",
   "offers": {
     "@type": "Offer",
-    "price": "36",
+    "price": "22",
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock",
-    "url": "https://prcpeptides.com/products/pt-141.html"
+    "url": "https://prcpeptides.com/products/dermorphin.html"
   }
 }
 </script>
@@ -42,7 +42,7 @@
   },{
     "@type": "ListItem",
     "position": 3,
-    "name": "PT-141"
+    "name": "Dermorphin"
   }]
 }
 </script>
@@ -60,22 +60,22 @@
 </button>
 </div>
 </header>
-<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#melanocortin">Melanocortin</a> › PT-141</div>
+<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#melanocortin">Melanocortin</a> › Dermorphin</div>
 <main>
 <div class="category-label">Melanocortin</div>
-<h1>PT-141</h1>
+<h1>Dermorphin</h1>
 <div class="product-meta">
-<div class="product-price">$36</div>
+<div class="product-price">$22</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
 <div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
-<tr><td>Quantity</td><td>10mg</td></tr>
+<tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>CAS Number</td><td>189691-06-3</td></tr>
-<tr><td>Molecular Weight</td><td>1025.2 g/mol</td></tr>
-<tr><td>Molecular Formula</td><td>C<sub>50</sub>H<sub>68</sub>N<sub>14</sub>O<sub>10</sub></td></tr>
+<tr><td>CAS Number</td><td>77614-16-5</td></tr>
+<tr><td>Molecular Weight</td><td>802.9 g/mol</td></tr>
+<tr><td>Molecular Formula</td><td>C<sub>40</sub>H<sub>50</sub>N<sub>8</sub>O<sub>10</sub></td></tr>
 </table></div>
 <div class="trust-bar">
 <div class="trust-item">Third-Party Tested</div>
@@ -91,10 +91,10 @@
 </div>
 </div>
 <div class="action-btns">
-<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">36</span></button>
-<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20PT-141" class="btn-secondary">Request COA</a>
+<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">22</span></button>
+<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Dermorphin" class="btn-secondary">Request COA</a>
 </div>
-<h2>What is PT-141?</h2>
+<h2>What is Dermorphin?</h2>
 <p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
 
 <h2>Reconstitution & Use</h2>
@@ -124,7 +124,7 @@
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
 <div class="related-grid">
-<a href="dermorphin.html" class="related-card"><div class="related-cat">Melanocortin</div><div class="related-name">Dermorphin</div><div class="related-price">$22</div><div class="related-coa">COA ✓</div></a>
+<a href="pt-141.html" class="related-card"><div class="related-cat">Melanocortin</div><div class="related-name">PT-141</div><div class="related-price">$36</div><div class="related-coa">COA ✓</div></a>
 <a href="semaglutide.html" class="related-card"><div class="related-cat">GLP Agonists</div><div class="related-name">Semaglutide</div><div class="related-price">$30</div><div class="related-coa">COA ✓</div></a>
 </div>
 </div>
@@ -132,8 +132,8 @@
 <div class="mobile-sticky" id="mobileSticky">
 <div class="mobile-sticky-content">
 <div>
-<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">PT-141</div>
-<div class="mobile-sticky-price">$<span id="mobileTotalPrice">36</span></div>
+<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">Dermorphin</div>
+<div class="mobile-sticky-price">$<span id="mobileTotalPrice">22</span></div>
 </div>
 <button class="btn-primary" onclick="addToCart()">Add to Cart</button>
 </div>
@@ -141,7 +141,7 @@
 <footer id="pageFooter"><div class="footer-content"><div class="footer-logo"><span style="color:#2B7DE9">PRC</span> PEPTIDES</div><div class="footer-links"><a href="../shop.html">Shop</a><a href="mailto:support@prcpeptides.com">Contact</a></div><div class="footer-disclaimer">FOR RESEARCH PURPOSES ONLY. Not for human consumption. All products intended exclusively for in vitro research. © 2026 PRC Labs LLC</div></div></footer>
 <div class="toast" id="toast"></div>
 <script>
-var quantity=1;var basePrice=36;var productName='PT-141';
+var quantity=1;var basePrice=22;var productName='Dermorphin';
 function changeQty(delta){quantity=Math.max(1,quantity+delta);document.getElementById('qtyValue').textContent=quantity;updatePrice()}
 function updatePrice(){var total=basePrice*quantity;document.getElementById('totalPrice').textContent=total;document.getElementById('mobileTotalPrice').textContent=total}
 function addToCart(){var cart=JSON.parse(sessionStorage.getItem('prcCart')||'[]');var existing=cart.find(function(item){return item.name===productName});if(existing){existing.quantity+=quantity}else{cart.push({name:productName,price:basePrice,quantity:quantity})}sessionStorage.setItem('prcCart',JSON.stringify(cart));updateCartBadge();showToast()}
