--- a/products/mots-c.html
+++ b/products/mots-c.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Lipo-C Ultra Blend | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Lipo-C Ultra Blend research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Buy MOTS-c | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
+<meta name="description" content="MOTS-c research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
-  "name": "Lipo-C Ultra Blend",
+  "name": "MOTS-c",
   "description": "Research-grade peptide for in vitro laboratory investigation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
   },
-  "sku": "PRC-lipo-c-ultra",
+  "sku": "PRC-mots-c",
   "offers": {
     "@type": "Offer",
-    "price": "42",
+    "price": "28",
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock",
-    "url": "https://prcpeptides.com/products/lipo-c-ultra.html"
+    "url": "https://prcpeptides.com/products/mots-c.html"
   }
 }
 </script>
@@ -42,7 +42,7 @@
   },{
     "@type": "ListItem",
     "position": 3,
-    "name": "Lipo-C Ultra Blend"
+    "name": "MOTS-c"
   }]
 }
 </script>
@@ -60,22 +60,22 @@
 </button>
 </div>
 </header>
-<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#metabolic">Metabolic</a> › Lipo-C Ultra Blend</div>
+<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#metabolic">Metabolic</a> › MOTS-c</div>
 <main>
 <div class="category-label">Metabolic</div>
-<h1>Lipo-C Ultra Blend</h1>
+<h1>MOTS-c</h1>
 <div class="product-meta">
-<div class="product-price">$42</div>
+<div class="product-price">$28</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
 <div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
-<tr><td>Quantity</td><td>10ml</td></tr>
+<tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>CAS Number</td><td>Premium blend</td></tr>
-<tr><td>Molecular Weight</td><td>Multi-component</td></tr>
-<tr><td>Molecular Formula</td><td>Complete metabolic</td></tr>
+<tr><td>CAS Number</td><td>1627580-64-6</td></tr>
+<tr><td>Molecular Weight</td><td>2174.6 g/mol</td></tr>
+<tr><td>Molecular Formula</td><td>C<sub>101</sub>H<sub>152</sub>N<sub>28</sub>O<sub>22</sub>S<sub>2</sub></td></tr>
 </table></div>
 <div class="trust-bar">
 <div class="trust-item">Third-Party Tested</div>
@@ -91,10 +91,10 @@
 </div>
 </div>
 <div class="action-btns">
-<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">42</span></button>
-<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Lipo-C%20Ultra%20Blend" class="btn-secondary">Request COA</a>
+<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">28</span></button>
+<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20MOTS-c" class="btn-secondary">Request COA</a>
 </div>
-<h2>What is Lipo-C Ultra Blend?</h2>
+<h2>What is MOTS-c?</h2>
 <p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
 
 <h2>Reconstitution & Use</h2>
@@ -125,7 +125,7 @@
 <h2>Researchers Also Explore</h2>
 <div class="related-grid">
 <a href="aod-9604.html" class="related-card"><div class="related-cat">Metabolic</div><div class="related-name">AOD-9604</div><div class="related-price">$20</div><div class="related-coa">COA ✓</div></a>
-<a href="mots-c.html" class="related-card"><div class="related-cat">Metabolic</div><div class="related-name">MOTS-c</div><div class="related-price">$28</div><div class="related-coa">COA ✓</div></a>
+<a href="5-amino-1mq.html" class="related-card"><div class="related-cat">Metabolic</div><div class="related-name">5-Amino-1MQ</div><div class="related-price">$25</div><div class="related-coa">COA ✓</div></a>
 <a href="semaglutide.html" class="related-card"><div class="related-cat">GLP Agonists</div><div class="related-name">Semaglutide</div><div class="related-price">$30</div><div class="related-coa">COA ✓</div></a>
 </div>
 </div>
@@ -133,8 +133,8 @@
 <div class="mobile-sticky" id="mobileSticky">
 <div class="mobile-sticky-content">
 <div>
-<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">Lipo-C Ultra Blend</div>
-<div class="mobile-sticky-price">$<span id="mobileTotalPrice">42</span></div>
+<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">MOTS-c</div>
+<div class="mobile-sticky-price">$<span id="mobileTotalPrice">28</span></div>
 </div>
 <button class="btn-primary" onclick="addToCart()">Add to Cart</button>
 </div>
@@ -142,7 +142,7 @@
 <footer id="pageFooter"><div class="footer-content"><div class="footer-logo"><span style="color:#2B7DE9">PRC</span> PEPTIDES</div><div class="footer-links"><a href="../shop.html">Shop</a><a href="mailto:support@prcpeptides.com">Contact</a></div><div class="footer-disclaimer">FOR RESEARCH PURPOSES ONLY. Not for human consumption. All products intended exclusively for in vitro research. © 2026 PRC Labs LLC</div></div></footer>
 <div class="toast" id="toast"></div>
 <script>
-var quantity=1;var basePrice=42;var productName='Lipo-C Ultra Blend';
+var quantity=1;var basePrice=28;var productName='MOTS-c';
 function changeQty(delta){quantity=Math.max(1,quantity+delta);document.getElementById('qtyValue').textContent=quantity;updatePrice()}
 function updatePrice(){var total=basePrice*quantity;document.getElementById('totalPrice').textContent=total;document.getElementById('mobileTotalPrice').textContent=total}
 function addToCart(){var cart=JSON.parse(sessionStorage.getItem('prcCart')||'[]');var existing=cart.find(function(item){return item.name===productName});if(existing){existing.quantity+=quantity}else{cart.push({name:productName,price:basePrice,quantity:quantity})}sessionStorage.setItem('prcCart',JSON.stringify(cart));updateCartBadge();showToast()}
