--- a/products/ll-37.html
+++ b/products/ll-37.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Laennec | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Laennec research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Buy LL-37 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
+<meta name="description" content="LL-37 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
-  "name": "Laennec",
+  "name": "LL-37",
   "description": "Research-grade peptide for in vitro laboratory investigation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
   },
-  "sku": "PRC-laennec",
+  "sku": "PRC-ll-37",
   "offers": {
     "@type": "Offer",
-    "price": "425",
+    "price": "29",
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock",
-    "url": "https://prcpeptides.com/products/laennec.html"
+    "url": "https://prcpeptides.com/products/ll-37.html"
   }
 }
 </script>
@@ -42,7 +42,7 @@
   },{
     "@type": "ListItem",
     "position": 3,
-    "name": "Laennec"
+    "name": "LL-37"
   }]
 }
 </script>
@@ -60,22 +60,22 @@
 </button>
 </div>
 </header>
-<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#tissue">Tissue Repair</a> › Laennec</div>
+<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#tissue">Tissue Repair</a> › LL-37</div>
 <main>
 <div class="category-label">Tissue Repair</div>
-<h1>Laennec</h1>
+<h1>LL-37</h1>
 <div class="product-meta">
-<div class="product-price">$425</div>
+<div class="product-price">$29</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
 <div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
-<tr><td>Quantity</td><td>10 ampules</td></tr>
+<tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>CAS Number</td><td>Placental extract</td></tr>
-<tr><td>Molecular Weight</td><td>Multi-factor complex</td></tr>
-<tr><td>Molecular Formula</td><td>>50 growth factors</td></tr>
+<tr><td>CAS Number</td><td>154947-66-7</td></tr>
+<tr><td>Molecular Weight</td><td>4493.3 g/mol</td></tr>
+<tr><td>Molecular Formula</td><td>C<sub>205</sub>H<sub>340</sub>N<sub>60</sub>O<sub>53</sub></td></tr>
 </table></div>
 <div class="trust-bar">
 <div class="trust-item">Third-Party Tested</div>
@@ -91,10 +91,10 @@
 </div>
 </div>
 <div class="action-btns">
-<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">425</span></button>
-<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Laennec" class="btn-secondary">Request COA</a>
+<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">29</span></button>
+<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20LL-37" class="btn-secondary">Request COA</a>
 </div>
-<h2>What is Laennec?</h2>
+<h2>What is LL-37?</h2>
 <p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
 
 <h2>Reconstitution & Use</h2>
@@ -133,8 +133,8 @@
 <div class="mobile-sticky" id="mobileSticky">
 <div class="mobile-sticky-content">
 <div>
-<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">Laennec</div>
-<div class="mobile-sticky-price">$<span id="mobileTotalPrice">425</span></div>
+<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">LL-37</div>
+<div class="mobile-sticky-price">$<span id="mobileTotalPrice">29</span></div>
 </div>
 <button class="btn-primary" onclick="addToCart()">Add to Cart</button>
 </div>
@@ -142,7 +142,7 @@
 <footer id="pageFooter"><div class="footer-content"><div class="footer-logo"><span style="color:#2B7DE9">PRC</span> PEPTIDES</div><div class="footer-links"><a href="../shop.html">Shop</a><a href="mailto:support@prcpeptides.com">Contact</a></div><div class="footer-disclaimer">FOR RESEARCH PURPOSES ONLY. Not for human consumption. All products intended exclusively for in vitro research. © 2026 PRC Labs LLC</div></div></footer>
 <div class="toast" id="toast"></div>
 <script>
-var quantity=1;var basePrice=425;var productName='Laennec';
+var quantity=1;var basePrice=29;var productName='LL-37';
 function changeQty(delta){quantity=Math.max(1,quantity+delta);document.getElementById('qtyValue').textContent=quantity;updatePrice()}
 function updatePrice(){var total=basePrice*quantity;document.getElementById('totalPrice').textContent=total;document.getElementById('mobileTotalPrice').textContent=total}
 function addToCart(){var cart=JSON.parse(sessionStorage.getItem('prcCart')||'[]');var existing=cart.find(function(item){return item.name===productName});if(existing){existing.quantity+=quantity}else{cart.push({name:productName,price:basePrice,quantity:quantity})}sessionStorage.setItem('prcCart',JSON.stringify(cart));updateCartBadge();showToast()}
