--- a/products/semax.html
+++ b/products/semax.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy DSIP Night Blend | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="DSIP Night Blend research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Buy Semax | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
+<meta name="description" content="Semax research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
-  "name": "DSIP Night Blend",
+  "name": "Semax",
   "description": "Research-grade peptide for in vitro laboratory investigation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
   },
-  "sku": "PRC-dsip-night-blend",
+  "sku": "PRC-semax",
   "offers": {
     "@type": "Offer",
-    "price": "42",
+    "price": "31",
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock",
-    "url": "https://prcpeptides.com/products/dsip-night-blend.html"
+    "url": "https://prcpeptides.com/products/semax.html"
   }
 }
 </script>
@@ -42,7 +42,7 @@
   },{
     "@type": "ListItem",
     "position": 3,
-    "name": "DSIP Night Blend"
+    "name": "Semax"
   }]
 }
 </script>
@@ -60,12 +60,12 @@
 </button>
 </div>
 </header>
-<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#neuropeptides">Neuropeptides</a> › DSIP Night Blend</div>
+<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#neuropeptides">Neuropeptides</a> › Semax</div>
 <main>
 <div class="category-label">Neuropeptides</div>
-<h1>DSIP Night Blend</h1>
+<h1>Semax</h1>
 <div class="product-meta">
-<div class="product-price">$42</div>
+<div class="product-price">$31</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
 <div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
@@ -73,9 +73,9 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>CAS Number</td><td>Proprietary blend</td></tr>
-<tr><td>Molecular Weight</td><td>Multi-peptide</td></tr>
-<tr><td>Molecular Formula</td><td>Sleep complex</td></tr>
+<tr><td>CAS Number</td><td>80714-61-0</td></tr>
+<tr><td>Molecular Weight</td><td>813.9 g/mol</td></tr>
+<tr><td>Molecular Formula</td><td>C<sub>37</sub>H<sub>51</sub>N<sub>9</sub>O<sub>10</sub>S</td></tr>
 </table></div>
 <div class="trust-bar">
 <div class="trust-item">Third-Party Tested</div>
@@ -91,10 +91,10 @@
 </div>
 </div>
 <div class="action-btns">
-<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">42</span></button>
-<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20DSIP%20Night%20Blend" class="btn-secondary">Request COA</a>
+<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">31</span></button>
+<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Semax" class="btn-secondary">Request COA</a>
 </div>
-<h2>What is DSIP Night Blend?</h2>
+<h2>What is Semax?</h2>
 <p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
 
 <h2>Reconstitution & Use</h2>
@@ -133,8 +133,8 @@
 <div class="mobile-sticky" id="mobileSticky">
 <div class="mobile-sticky-content">
 <div>
-<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">DSIP Night Blend</div>
-<div class="mobile-sticky-price">$<span id="mobileTotalPrice">42</span></div>
+<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">Semax</div>
+<div class="mobile-sticky-price">$<span id="mobileTotalPrice">31</span></div>
 </div>
 <button class="btn-primary" onclick="addToCart()">Add to Cart</button>
 </div>
@@ -142,7 +142,7 @@
 <footer id="pageFooter"><div class="footer-content"><div class="footer-logo"><span style="color:#2B7DE9">PRC</span> PEPTIDES</div><div class="footer-links"><a href="../shop.html">Shop</a><a href="mailto:support@prcpeptides.com">Contact</a></div><div class="footer-disclaimer">FOR RESEARCH PURPOSES ONLY. Not for human consumption. All products intended exclusively for in vitro research. © 2026 PRC Labs LLC</div></div></footer>
 <div class="toast" id="toast"></div>
 <script>
-var quantity=1;var basePrice=42;var productName='DSIP Night Blend';
+var quantity=1;var basePrice=31;var productName='Semax';
 function changeQty(delta){quantity=Math.max(1,quantity+delta);document.getElementById('qtyValue').textContent=quantity;updatePrice()}
 function updatePrice(){var total=basePrice*quantity;document.getElementById('totalPrice').textContent=total;document.getElementById('mobileTotalPrice').textContent=total}
 function addToCart(){var cart=JSON.parse(sessionStorage.getItem('prcCart')||'[]');var existing=cart.find(function(item){return item.name===productName});if(existing){existing.quantity+=quantity}else{cart.push({name:productName,price:basePrice,quantity:quantity})}sessionStorage.setItem('prcCart',JSON.stringify(cart));updateCartBadge();showToast()}
