--- a/products/ss-31.html
+++ b/products/ss-31.html
@@ -3,25 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Glutathione 1500mg | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Glutathione 1500mg research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Buy SS-31 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
+<meta name="description" content="SS-31 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
-  "name": "Glutathione 1500mg",
+  "name": "SS-31",
   "description": "Research-grade peptide for in vitro laboratory investigation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
   },
-  "sku": "PRC-glutathione-1500mg",
+  "sku": "PRC-ss-31",
   "offers": {
     "@type": "Offer",
-    "price": "38",
+    "price": "55",
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock",
-    "url": "https://prcpeptides.com/products/glutathione-1500mg.html"
+    "url": "https://prcpeptides.com/products/ss-31.html"
   }
 }
 </script>
@@ -42,7 +42,7 @@
   },{
     "@type": "ListItem",
     "position": 3,
-    "name": "Glutathione 1500mg"
+    "name": "SS-31"
   }]
 }
 </script>
@@ -60,22 +60,22 @@
 </button>
 </div>
 </header>
-<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#antioxidants">Antioxidants</a> › Glutathione 1500mg</div>
+<div class="breadcrumb"><a href="../shop.html">← Back to Shop</a> › <a href="../shop.html#antioxidants">Antioxidants</a> › SS-31</div>
 <main>
 <div class="category-label">Antioxidants</div>
-<h1>Glutathione 1500mg</h1>
+<h1>SS-31</h1>
 <div class="product-meta">
-<div class="product-price">$38</div>
+<div class="product-price">$55</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
 <div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
-<tr><td>Quantity</td><td>1500mg</td></tr>
+<tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>CAS Number</td><td>70-18-8</td></tr>
-<tr><td>Molecular Weight</td><td>307.3 g/mol</td></tr>
-<tr><td>Molecular Formula</td><td>C<sub>10</sub>H<sub>17</sub>N<sub>3</sub>O<sub>6</sub>S</td></tr>
+<tr><td>CAS Number</td><td>736992-21-5</td></tr>
+<tr><td>Molecular Weight</td><td>639.8 g/mol</td></tr>
+<tr><td>Molecular Formula</td><td>C<sub>32</sub>H<sub>49</sub>N<sub>9</sub>O<sub>5</sub></td></tr>
 </table></div>
 <div class="trust-bar">
 <div class="trust-item">Third-Party Tested</div>
@@ -91,10 +91,10 @@
 </div>
 </div>
 <div class="action-btns">
-<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">38</span></button>
-<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Glutathione%201500mg" class="btn-secondary">Request COA</a>
+<button class="btn-primary" onclick="addToCart()">Add to Cart — $<span id="totalPrice">55</span></button>
+<a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20SS-31" class="btn-secondary">Request COA</a>
 </div>
-<h2>What is Glutathione 1500mg?</h2>
+<h2>What is SS-31?</h2>
 <p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
 
 <h2>Reconstitution & Use</h2>
@@ -133,8 +133,8 @@
 <div class="mobile-sticky" id="mobileSticky">
 <div class="mobile-sticky-content">
 <div>
-<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">Glutathione 1500mg</div>
-<div class="mobile-sticky-price">$<span id="mobileTotalPrice">38</span></div>
+<div style="font-size:0.75rem;color:#64748B;margin-bottom:2px">SS-31</div>
+<div class="mobile-sticky-price">$<span id="mobileTotalPrice">55</span></div>
 </div>
 <button class="btn-primary" onclick="addToCart()">Add to Cart</button>
 </div>
@@ -142,7 +142,7 @@
 <footer id="pageFooter"><div class="footer-content"><div class="footer-logo"><span style="color:#2B7DE9">PRC</span> PEPTIDES</div><div class="footer-links"><a href="../shop.html">Shop</a><a href="mailto:support@prcpeptides.com">Contact</a></div><div class="footer-disclaimer">FOR RESEARCH PURPOSES ONLY. Not for human consumption. All products intended exclusively for in vitro research. © 2026 PRC Labs LLC</div></div></footer>
 <div class="toast" id="toast"></div>
 <script>
-var quantity=1;var basePrice=38;var productName='Glutathione 1500mg';
+var quantity=1;var basePrice=55;var productName='SS-31';
 function changeQty(delta){quantity=Math.max(1,quantity+delta);document.getElementById('qtyValue').textContent=quantity;updatePrice()}
 function updatePrice(){var total=basePrice*quantity;document.getElementById('totalPrice').textContent=total;document.getElementById('mobileTotalPrice').textContent=total}
 function addToCart(){var cart=JSON.parse(sessionStorage.getItem('prcCart')||'[]');var existing=cart.find(function(item){return item.name===productName});if(existing){existing.quantity+=quantity}else{cart.push({name:productName,price:basePrice,quantity:quantity})}sessionStorage.setItem('prcCart',JSON.stringify(cart));updateCartBadge();showToast()}
